修改把脚本的jar包添加到classpath，而不是java.ext.dirs参数里面